Add plugins needed to deploy to maven central